// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffButton renders the button with the text \`Saving...\` 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1D1D1B",
      "borderRadius": 2,
      "borderStyle": "solid",
      "borderWidth": 2,
      "color": "#1D1D1B",
      "cursor": "pointer",
      "elevation": 0,
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 16,
      "height": 45,
      "justifyContent": "center",
      "letterSpacing": 0.2,
      "lineHeight": 0,
      "minWidth": 100,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  type="button"
>
  Saving…
</button>
`;

exports[`NewsletterPuffButton renders the button with the text \`Sign up to newsletter\` 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "borderColor": "#1D1D1B",
      "borderRadius": 2,
      "borderStyle": "solid",
      "borderWidth": 2,
      "color": "#1D1D1B",
      "cursor": "pointer",
      "elevation": 0,
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": 16,
      "height": 45,
      "justifyContent": "center",
      "letterSpacing": 0.2,
      "lineHeight": 0,
      "minWidth": 100,
      "paddingTop": 4,
      "width": "100%",
    }
  }
  type="button"
>
  Sign up to newsletter
</button>
`;

exports[`NewsletterPuffButton should track button viewed and clicked in analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "NewsletterPuffButton",
    },
  ],
  Array [
    Object {
      "action": "onPress",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
        "updatingSubscription": false,
      },
      "component": "widget : puff : sign up to newsletter",
      "object": "NewsletterPuffButton",
    },
  ],
]
`;

exports[`NewsletterPuffButton should track button viewed in analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "NewsletterPuffButton",
    },
  ],
]
`;
